--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.11
   intl: ^0.19.0
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
