--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_native_splash: ^2.3.11
   intl: ^0.19.0
   flutter_slidable: ^3.0.1
+  easy_date_timeline: ^1.0.5
 
 dev_dependencies:
   flutter_test:
