--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -16,11 +16,12 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  flutter_native_splash: ^2.3.11
+  # flutter_native_splash: ^2.3.11
   intl: ^0.19.0
   flutter_slidable: ^3.0.1
   easy_date_timeline: ^1.0.5
-
+  firebase_core: ^2.25.5
+  # firebase_core: ^2.25.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
