--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_slidable: ^3.0.1
   easy_date_timeline: ^1.0.5
   firebase_core: ^2.25.5
+  cloud_firestore: ^4.15.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
