--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   easy_date_timeline: ^1.0.5
   firebase_core: ^2.25.5
   cloud_firestore: ^4.15.6
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
