--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^2.25.5
   cloud_firestore: ^4.15.6
   provider: ^6.1.2
+  firebase_auth: ^4.17.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
