--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cloud_firestore: ^4.15.6
   provider: ^6.1.2
   firebase_auth: ^4.17.8
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
